# OperaSys

./: CMakeLists.txt  README.md
Report&Screenshot/: lab2_report.md
lab2/: lab2.cpp  lab2_producer_consumer_problem.cpp
lab4/: lab4.cpp
