cmake_minimum_required(VERSION 3.24)
project(OperaSys)

set(CMAKE_CXX_STANDARD 17)

add_executable(OperaSys main.cpp)
add_executable(lab1 lab1/lab1.cpp)
add_executable(lab2 lab2/lab2.cpp)
add_executable(lab3 lab3/lab3.cpp)
add_executable(lab4 lab4/lab4.cpp)
add_executable(lab5 lab5/lab5.cpp)
add_executable(lab6 lab6/lab6.cpp)
add_executable(lab7 lab7/lab7.cpp)

